tests/ui/unknown_setting.stderr
warning: panic message is not a string literal
   --> src/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error: unknown setting `trololo`, expected one of `assert_unwind_safe`, `allow_not_macro`, `proc_macro_hack`
 --> tests/ui/unknown_setting.rs:3:57
  |
3 | #[proc_macro_error(allow_not_macro, assert_unwind_safe, trololo)]
  |                                                         ^^^^^^^
